@@ -38,8 +38,12 @@ intersecting sites.
 
 \ccIncludeExampleCode{Segment_Voronoi_diagram_2/svd-filtered-traits.C}
 
-%\subsection{Second example}
-%\ccIncludeExampleCode{Segment_Voronoi_diagram_2/example2.C}
+\subsection{Third example}
 
-%\subsection{Third example}
+The following example demonstrates how to recover the defining sites
+for the edges of the Voronoi diagram.
+
+\ccIncludeExampleCode{Segment_Voronoi_diagram_2/svd-voronoi-edges.C}
+
+%\subsection{Fourth example}
 %\ccIncludeExampleCode{Segment_Voronoi_diagram_2/example3.C}
